[package]
name = "sal-sync"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "^0.4"
env_logger = "^0.11"

testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }

concat-in-place = "^1.1"
concat-string = "^1.0"

chrono = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.9"
serde_json = "^1.0"

indexmap = "^2.4"

regex = "^1.10"

rand = "^0.8"
