[package]
name = "sal-sync"
version = "0.3.0"
edition = "2024"

[dependencies]
log = "~0.4"
env_logger = "~0.11"

sal-core = { git = "https://github.com/a-givertzman/rust-sal-core.git", tag = "0.1.0" }
testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.2" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.1.1" }

#
# Time
chrono = "~0.4"
#
# Serde
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.9"
serde_json = "~1.0"
#
# Collection
hashers = "~1.0"
indexmap = "~2.9"

regex = "~1.11"

rand = "~0.9"

lexical = "~7.0"
#
# Working with enums and strings
strum = "~0.27"
strum_macros = "~0.27"
concat-in-place = "~1.1"
concat-string = "~1.0"
#
# Safe multithreading
kanal = "0.1"
crossbeam-skiplist = "~0.1"
coco = "~0.3"
dashmap = "~6.1"
parking_lot = "~0.12"
